feat: versión inicial de la creación de un agreement template
