# src/models/guaranteeTemplate.model.ts
@@ -2,21 +2,6 @@ import mongoose, { Schema, Document } from 'mongoose';
 
 // Subdocumentos
 
-const unitPeriodSchema = new Schema(
-    {
-        unit: {
-            type: String,
-            required: true,
-            enum: ['milisecond', 'second', 'minute', 'hour', 'day', 'week'],
-        },
-        value: {
-            type: Number,
-            required: true,
-        },
-    },
-    { _id: false },
-);
-
 const infoSchema = new Schema(
     {
         title: { type: String, required: true },
@@ -26,46 +11,30 @@ const infoSchema = new Schema(
     { _id: false },
 );
 
-const windowSchema = new Schema(
-    {
-        period: { type: [unitPeriodSchema], required: true },
-        anchorDate: { type: Date, required: true }, // TODO: necesario el required true para el anchorDate?
-    },
-    { _id: false },
-);
-
 // Interfaz para TypeScript
 
 export interface IGuaranteeTemplate extends Document {
     name: string;
-    multiPart: boolean;
     info: {
         title: string;
         description: string;
         example: string;
     };
     numericExpression: string;
-    comparator: string | null;
-    threshold: number | null;
-    window: {
-        period: {
-            unit: string;
-            value: number;
-        }[];
-        anchorDate: Date;
-    } | null;
+    comparator: null;
+    threshold: null;
+    window: null;
 }
 
 // Esquema principal
 
 const guaranteeTemplateSchema = new Schema<IGuaranteeTemplate>({
     name: { type: String, required: true, unique: true },
-    multiPart: { type: Boolean, required: true },
     info: { type: infoSchema, required: true },
     numericExpression: { type: String, required: true },
-    comparator: { type: String },
-    threshold: { type: Number },
-    window: { type: windowSchema },
+    comparator: { type: Schema.Types.Mixed },
+    threshold: { type: Schema.Types.Mixed },
+    window: { type: Schema.Types.Mixed },
 });
 
 const GuaranteeTemplate = mongoose.model<IGuaranteeTemplate>(
